--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
     <title>SDET Studios AI</title>
 
     <link rel="icon" type="image/png" sizes="57x57" href="asset/icon.png" />
-    <link rel="icon" type="image/png" sizes="72x72" href="asset/icon.png" />
-    <link rel="icon" type="image/png" sizes="114x114" href="asset/icon.png" />
-    <link rel="icon" type="image/png" sizes="144x144" href="asset/icon.png" />
+    
     <link rel="apple-touch-icon" sizes="180x180" href="asset/icon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -154,7 +152,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        group: session-item;
+        /* session-item */
       }
 
       .chat-session-item:hover {
