--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SDET Studios AI</title>
 
-    <link rel="icon" type="image/png" sizes="57x57" href="asset/logo.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="asset/logo.png" />
+    <link rel="icon" type="image/png" sizes="57x57" href="asset/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="asset/icon.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,9 +15,12 @@
       rel="stylesheet"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked@12.0.2/marked.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3/dist/purify.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
 
     <style>
@@ -297,30 +300,55 @@
       }
 
       /* Text Elements */
-      .message-content p { margin-bottom: 1rem; }
-      .message-content p:last-child { margin-bottom: 0; }
-      .message-content strong { font-weight: 600; color: var(--text-primary); }
-      .message-content em { font-style: italic; }
-      .message-content a { color: var(--text-primary); text-decoration: underline; }
-      
+      .message-content p {
+        margin-bottom: 1rem;
+      }
+      .message-content p:last-child {
+        margin-bottom: 0;
+      }
+      .message-content strong {
+        font-weight: 600;
+        color: var(--text-primary);
+      }
+      .message-content em {
+        font-style: italic;
+      }
+      .message-content a {
+        color: var(--text-primary);
+        text-decoration: underline;
+      }
+
       /* Headers */
-      .message-content h1, .message-content h2, .message-content h3, 
-      .message-content h4, .message-content h5, .message-content h6 {
+      .message-content h1,
+      .message-content h2,
+      .message-content h3,
+      .message-content h4,
+      .message-content h5,
+      .message-content h6 {
         color: var(--text-primary);
         font-weight: 600;
         margin-top: 1.5rem;
         margin-bottom: 0.5rem;
       }
-      .message-content h1 { font-size: 1.5em; }
-      .message-content h2 { font-size: 1.25em; }
-      .message-content h3 { font-size: 1.1em; }
+      .message-content h1 {
+        font-size: 1.5em;
+      }
+      .message-content h2 {
+        font-size: 1.25em;
+      }
+      .message-content h3 {
+        font-size: 1.1em;
+      }
 
       /* Lists */
-      .message-content ul, .message-content ol {
+      .message-content ul,
+      .message-content ol {
         margin-bottom: 1rem;
         padding-left: 1.5rem;
       }
-      .message-content li { margin-bottom: 0.25rem; }
+      .message-content li {
+        margin-bottom: 0.25rem;
+      }
 
       /* Inline Code */
       .message-content :not(pre) > code {
@@ -328,7 +356,7 @@
         border: 1px solid var(--border-subtle);
         padding: 0.2em 0.4em;
         border-radius: 4px;
-        font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
+        font-family: "Menlo", "Monaco", "Courier New", monospace;
         font-size: 0.9em;
         color: var(--text-primary);
       }
@@ -369,7 +397,9 @@
         gap: 4px;
         font-size: 0.75rem;
       }
-      .code-copy-btn:hover { color: var(--text-primary); }
+      .code-copy-btn:hover {
+        color: var(--text-primary);
+      }
 
       .message-content pre {
         margin: 0;
@@ -381,17 +411,17 @@
         background: transparent;
         padding: 0;
         border: none;
-        font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
+        font-family: "Menlo", "Monaco", "Courier New", monospace;
         font-size: 0.9em;
         color: inherit;
       }
 
-      /* --- Actions (UPDATED: Visible by Default) --- */
+      /* --- Actions (Visible by Default) --- */
       .message-actions {
         margin-top: 0.8rem;
         display: flex;
         gap: 6px;
-        opacity: 1; /* Changed from 0 to 1 */
+        opacity: 1;
         transition: opacity 0.2s ease;
       }
 
@@ -438,7 +468,8 @@
         justify-content: flex-end;
       }
 
-      .save-btn, .cancel-btn {
+      .save-btn,
+      .cancel-btn {
         padding: 6px 12px;
         border-radius: 4px;
         font-size: 0.85rem;
@@ -447,8 +478,15 @@
         border: none;
       }
 
-      .save-btn { background: var(--text-primary); color: var(--bg-app); }
-      .cancel-btn { background: transparent; border: 1px solid var(--border-strong); color: var(--text-primary); }
+      .save-btn {
+        background: var(--text-primary);
+        color: var(--bg-app);
+      }
+      .cancel-btn {
+        background: transparent;
+        border: 1px solid var(--border-strong);
+        color: var(--text-primary);
+      }
 
       /* --- Input Area --- */
       .input-area {
@@ -490,7 +528,9 @@
         line-height: 1.5;
       }
 
-      #user-input::placeholder { color: var(--text-tertiary); }
+      #user-input::placeholder {
+        color: var(--text-tertiary);
+      }
 
       #send-button {
         position: absolute;
@@ -509,7 +549,10 @@
         transition: opacity 0.2s;
       }
 
-      #send-button:disabled { opacity: 0.5; cursor: default; }
+      #send-button:disabled {
+        opacity: 0.5;
+        cursor: default;
+      }
 
       #typing-indicator {
         height: 20px;
@@ -523,7 +566,9 @@
         width: 100%;
       }
 
-      #typing-indicator.visible { opacity: 1; }
+      #typing-indicator.visible {
+        opacity: 1;
+      }
 
       @media (max-width: 768px) {
         .sidebar {
@@ -533,9 +578,15 @@
           height: 100%;
           transition: left 0.3s ease;
         }
-        .sidebar.open { left: 0; }
-        .message-wrapper { padding: 0 1rem; }
-        .input-container { margin: 0 1rem; }
+        .sidebar.open {
+          left: 0;
+        }
+        .message-wrapper {
+          padding: 0 1rem;
+        }
+        .input-container {
+          margin: 0 1rem;
+        }
       }
     </style>
   </head>
@@ -548,7 +599,16 @@
             <div class="logo-text">SDET Studios</div>
           </div>
           <button class="new-chat-btn" id="new-chat-btn">
-            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <svg
+              width="16"
+              height="16"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
               <line x1="12" y1="5" x2="12" y2="19"></line>
               <line x1="5" y1="12" x2="19" y2="12"></line>
             </svg>
@@ -561,7 +621,11 @@
       <div class="chat-container">
         <header>
           <div class="header-left">
-            <div style="font-weight: 600; font-size: 1.1rem; margin-bottom: 4px">Assistant</div>
+            <div
+              style="font-weight: 600; font-size: 1.1rem; margin-bottom: 4px"
+            >
+              Assistant
+            </div>
             <div class="model-badge">SDET-v1</div>
           </div>
           <div class="requests-counter">
@@ -582,7 +646,16 @@
               autofocus
             ></textarea>
             <button id="send-button">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
                 <line x1="12" y1="19" x2="12" y2="5"></line>
                 <polyline points="5 12 12 5 19 12"></polyline>
               </svg>
