--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SDET Studios AI</title>
 
-    <link rel="icon" type="image/png" sizes="57x57" href="asset/icon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="asset/icon.png" />
+    <link rel="icon" type="image/png" sizes="57x57" href="asset/logo.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="asset/logo.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
