fix: correct typo in file input HTML tag

--- a/public/index.html
+++ b/public/index.html
@@ -839,7 +839,7 @@ move {        background: transparent;
             <div class="file-upload-wrapper hidden" id="file-chips-container">
               <div class="attached-files" id="attached-files"></div>
             </div>
-            <inpfile" ut type="id="file-input" multiple title="Max: 5MB per file, 10MB total" />
+            <input type="file" id="file-input" multiple title="Max: 5MB per file, 10MB total" />
             <button class="file-upload-btn" id="file-upload-btn" style="position: absolute; bottom: 8px; left: 8px; background: transparent; border: 1px solid var(--border-subtle); width: 32px; height: 32px; padding: 0; border-radius: 8px; z-index: 1; display: flex; align-items: center; justify-content: center;" title="Attach files (Max: 5MB per file, 10MB total)">
               <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"></path>
