--- a/public/index.html
+++ b/public/index.html
@@ -807,7 +807,7 @@ move {        background: transparent;
         <header class="chat-header">
           <div class="header-content">
             <div class="model-selector-wrapper">
-              <s="1vg width8" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"necap="round" stroke stroke-li-linejoin="round" class="model-icon">
+              <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="model-icon">
                 <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
                 <line x1="8" y1="21" x2="16" y2="21"></line>
                 <line x1="12" y1="17" x2="12" y2="21"></line>
@@ -823,7 +823,7 @@ move {        background: transparent;
                 <option value="devstral-2512">Devstral 2 [Code]</option>
                 <option value="riverflow-v2">Riverflow V2 [Image Gen]</option>
               </select>
-              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" styleacit="opy: 0.5; pointer-events: none;">
+              <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="opacity: 0.5; pointer-events: none;">
                 <polyline points="6 9 12 15 18 9"></polyline>
               </svg>
             </div>
