--- a/public/index.html
+++ b/public/index.html
@@ -813,16 +813,14 @@ move {        background: transparent;
                 <line x1="12" y1="17" x2="12" y2="21"></line>
               </svg>
               <select id="model-selector" class="model-selector">
-                <optgroup label="🆓>
-   Free Models"                <option value="sdet-v1">SDET-v1 [Text]</option>
-                  <option value="xiaomi-mimo">Xiaomi Mimo [Text-v2]</option>
-                  <option value="gpt-oss-120b">GPT OSS 120B [Text]</op   tion>
-               <option value="llama-3.3-70b">Llama 3.3 70B [Text]</option>
+                <optgroup label="🆓 Free Models">
+                  <option value="sdet-v1">SDET-v1 [Text]</option>
+                  <option value="xiaomi-mimo">Xiaomi Mimo-v2 [Text]</option>
+                  <option value="gpt-oss-120b">GPT OSS 120B [Text]</option>
+                  <option value="llama-3.3-70b">Llama 3.3 70B [Text]</option>
                   <option value="molmo-2-8b">Molmo2 8B [Vision+Video]</option>
-                  <option value="seedream-4.5">Seedream 4.5 [Image Gen]</option>
                   <option value="nemotron-3-nano">Nemotron 3 Nano [Agent]</option>
-                  <option value="devstral-2512">Devstral 2 [Code]</option>
-                  <option value="riverflow-v2">Riverflow V2 [Image Gen]</option>
+               <o   ption value="devstral-2512">Devstral 2 [Code]</option>
                 </optgroup>
                 <optgroup label="💎 Premium Models">
                   <option value="claude-sonnet-4.5">Claude 4.5 Sonnet [Premium]</option>
